# picLocker

./: .env.example  .gitignore  _stubs.py  config.py  db.py  embeddings.py  facts.py  ingest.py  main.py  pyproject.toml  s3_client.py  schemas.sql  search.py  upload.py  utils.py
docs/: DESIGN.md  IDEAS.md  piclocker-prerequisites-learning.md  piclocker-problem-brief.md  pillow-image-insights.txt  python-dataclasses.md  python-generators.md  section6-study-notes.md  threads-async-processes.md
piclocker/: config.py  db.py  embeddings.py  facts.py  ingest.py  s3_client.py  search.py  server.py  stats.py  upload.py  watch.py
tests/: conftest.py  test_smoke.py
