[project]
name = "piclocker"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.27",
    "boto3-stubs~=1.43.27",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "imagehash>=4.3.2",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
